--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Thales's Odin's Recipes</h1>
+    <ul>
+        <li>
+            <a href="thales-recipes/lasagna.html">Thales's Lasagna</a>
+        </li>
+        <li>
+            <a href="thales-recipes/caipirinha.html">Thales's Caipirinha</a>
+        </li>
+        <li>
+            <a href="thales-recipes/pouré.html">Thales's Pouré</a>
+        </li>
+    </ul>   
 </body>
 </html>
