--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Thales' recipes</title>
 </head>
 <body>
-    <h1>Thales's Odin's Recipes</h1>
+    <h1>Thales' Odin's Recipes</h1>
     <ul>
         <li>
             <a href="thales-recipes/lasagna.html">Thales's Lasagna</a>
