--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <div class="page">
         <div class="header">
-            <div class="header logo">Header Logo</div>
-            <div class="header links">
+            <div class="logo">Header Logo</div>
+            <div class="links">
                 <div class="link">header link one</div>
                 <div class="link">header link two</div>
                 <div class="link">header link three</div>
@@ -51,6 +50,5 @@
             <div class="action button">Sign up</div>
         </div>
         <div class="footer">Copyright © The Odin Project 2023</div>
-    </div>
 </body>
 </html>
