--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -17,30 +17,31 @@
             </div>
         </div>
         <div class="description">
-            <div class="description left"></div>
+            <div class="left">
                 <div class="text1">This website is awesome</div>
                 <div class="text2">This website has some subtext that goes here under the main tittle. It's a smaller font and color is lower contrast.</div>
-                <div class="description button">Sign up</div>
-            <div class="description right">this is a placeholder for an image</div>
+                <div class="button">Sign up</div>
+            </div>
+            <div class="right">this is a placeholder for an image</div>
         </div>
         <div class="information">
-            <div class="information top">Some random information.</div>
-            <div class="information middle">
+            <div class="top">Some random information.</div>
+            <div class="middle">
                 <div class="image"></div>
                 <div class="image"></div>
                 <div class="image"></div>
                 <div class="image"></div>
             </div>
-            <div class="information bottom">
-                <div class="information text">this is some subtext under an illustration or image</div>
-                <div class="information text">this is some subtext under an illustration or image</div>
-                <div class="information text">this is some subtext under an illustration or image</div>
-                <div class="information text">this is some subtext under an illustration or image</div>
+            <div class="bottom">
+                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
         <div class="quote">
-            <div class="quote text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div class="quote signature">-Thor, God of Thunder</div>
+            <div class="text3">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="signature">-Thor, God of Thunder</div>
         </div>
         <div class="action">
             <div class="action text">
