--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -20,23 +20,29 @@
             <div class="left">
                 <div class="text1">This website is awesome</div>
                 <div class="text2">This website has some subtext that goes here under the main tittle. It's a smaller font and color is lower contrast.</div>
-                <div class="button">Sign up</div>
+                <button class="button">Sign up</button>
             </div>
             <div class="right">this is a placeholder for an image</div>
         </div>
         <div class="information">
             <div class="top">Some random information.</div>
-            <div class="middle">
-                <div class="image"></div>
-                <div class="image"></div>
-                <div class="image"></div>
-                <div class="image"></div>
-            </div>
             <div class="bottom">
-                <div class="text">this is some subtext under an illustration or image</div>
-                <div class="text">this is some subtext under an illustration or image</div>
-                <div class="text">this is some subtext under an illustration or image</div>
-                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="container">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="container">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="container">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="container">
+                    <div class="image"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
         <div class="quote">
