--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -46,15 +46,17 @@
             </div>
         </div>
         <div class="quote">
-            <div class="text3">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="signature">-Thor, God of Thunder</div>
         </div>
         <div class="action">
-            <div class="action text">
-                <div class="action text1">Call to action! It's time!</div>
-                <div class="action text2">Sign up for our product by clicking that button right over there!</div>
+            <div class="container">
+                <div class="text">
+                    <div class="text1">Call to action! It's time!</div>
+                    <div class="text2">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="button">Sign up</button>
             </div>
-            <div class="action button">Sign up</div>
         </div>
         <div class="footer">Copyright © The Odin Project 2023</div>
 </body>
